client/src/styles/ResultSummary.css
@import "../index.css";

h2#not-found {
  font-weight: 400;
  text-align: left;
  padding-inline: 1rem;
  color: var(--clr-font-white);
}

.results-section {
  display: flex;
  gap: 1rem;
  padding-inline: 1rem;
  flex-wrap: wrap;
  align-items: stretch;
}

.result-box {
  grid-area: summary;
  height: 100%;
  width: 100%;
  background-color: var(--bg-clr-secondary);
  color: var(--clr-font-white);
  font-weight: bold;
  border-radius: 8px;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
  box-sizing: border-box;
}

.metric {
  display: flex;
  justify-content: space-between;
  font-size: 1rem;
}

.status-line {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-top: auto;
}
.res-label {
  color: var(--clr-font-white);
  font-weight: 600;
  padding-inline: 0.25rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.result-and-title {
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 1rem;
  flex: 1;
  min-width: 20rem;

}
.tooltip-label {
  cursor: help;
  display: inline-block;
  padding-right: 6px;
}

.result-text {
  /* now used in App.css */
  font-size: 1.7rem;
  color: var(--clr-font-white);
  text-align: left;
  margin-left: 1rem;
  margin-bottom: 1rem;
}

.status-value.passing {
  color: var(--clr-green);
}

.status-value.failing {
  color: var(--clr-red-1);
}

.status-value.unstable {
  color: var(--clr-yellow);
}

.tooltip-container {
  position: relative;
  display: inline-block;
  cursor: help;
  padding-inline: 5px;
}

.tooltip-icon {
  color: var(--clr-input-placeholder);
  border-radius: 50%;
  border: 2px solid var(--clr-input-placeholder);
  width: 20px;

  height: 20px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  font-size: 14px;
}

.tooltip-text {
  visibility: hidden;
  width: 200px;
  background-color: var(--bg-clr-secondary);
  color: var(--clr-font-white);
  text-align: left;
  padding: 8px;
  border-radius: 6px;

  position: absolute;
  z-index: 1;
  bottom: 125%; /* position above the icon */
  left: 50%;
  transform: translateX(-50%);

  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip-container:hover .tooltip-text {
  visibility: visible;
  opacity: 1;
}

